--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.github.djarosz.spring</groupId>
+	<groupId>com.github.djarosz.spring</groupId>
 	<artifactId>spring-classloader-ejb-access</artifactId>
 	<version>1.0.1-SNAPSHOT</version>
 
